tests/expected/test004.semant.err
test004.usc:26:11: error: Expected type int in return statement
			return "Hello world!";
			       ^
test004.usc:27:12: error: Use of undeclared identifier 'x'
			return (x);
			        ^
test004.usc:28:13: error: Use of undeclared identifier 'z'
			return ++z;
			         ^
test004.usc:29:13: error: Use of undeclared identifier 'y'
			return --y;
			         ^
test004.usc:30:11: error: Use of undeclared identifier 'array'
			return array[2];
			       ^
test004.usc:31:10: error: Invalid empty return in non-void function
			return;
			      ^
test004.usc:34:1: error: USC requires non-void functions to end with a return
}
^
7 Error(s)
